# compilerdesign

./: .gitignore  README.md  pyproject.toml  run.sh  test  test1  test1.c  test1.s
src/compiler/: main.py
src/compiler/lexer/: ErrorToken.py  Lexer.py  Token.py  TokenKindType.py  TokenType.py
src/main/java/edu/kit/kastel/vads/compiler/: Main.java
src/main/java/edu/kit/kastel/vads/compiler/backend/aasm/: AasmRegisterAllocator.java  CodeGenerator.java
src/main/java/edu/kit/kastel/vads/compiler/backend/optimization/: NOPEliminator.java  Optimizer.java
src/main/java/edu/kit/kastel/vads/compiler/backend/regalloc/: RSPRegister.java  RegisterAllocator.java  X86_64Register.java  x86_64RegisterAllocator.java
src/main/java/edu/kit/kastel/vads/compiler/backend/util/: LivenessAnalyzer.java
src/main/java/edu/kit/kastel/vads/compiler/ir/: GraphConstructor.java  IrGraph.java  Scheduler.java  SsaTranslation.java
src/main/java/edu/kit/kastel/vads/compiler/ir/node/: BinaryOperationNode.java  BitAndNode.java  BitNotNode.java  BitOrNode.java  BitXorNode.java  Block.java  ConstBoolNode.java  DivNode.java  EqualsNode.java  ExitNode.java  GreaterEqualsNode.java  (+15 more)
src/main/java/edu/kit/kastel/vads/compiler/lexer/: Keyword.java  Lexer.java  Operator.java  Separator.java  Token.java
src/main/java/edu/kit/kastel/vads/compiler/parser/: Parser.java  Printer.java
src/main/java/edu/kit/kastel/vads/compiler/semantic/: BreakContinueAnalysis.java  ForLoopStepAnalysis.java  ReturnAnalysis.java  SemanticAnalysis.java  TypeAnalysis.java  VariableStatusAnalysis.java
test/: example1.c0
(+52 files in other folders)
