[tool.poetry]
name = "compilerdesign"
version = "0.1.0"
description = "Compiler for C0 Language"
authors = ["Placeholder <placeholder@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
